# cap

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.example  pyproject.toml  pytest.ini
.github/workflows/: deploy-dev-mobr01.yml
documentation/nl_queries/: natural_language.md
documentation/sparql_examples/: blocks.rq  status.rq  transactions.rq
evaluation/src/runner/: pipeline_wrapper.py
src/cap/: config.py  main.py  virtuoso.py
src/cap/api/: auth.py  auth_dependencies.py  cache_admin.py  conversation_admin.py  dashboard.py  demo_nl.py  etl_admin.py  metrics.py  nl_query.py  notifications_admin.py  router.py  share.py  share_i18n.json  sparql_query.py  system_admin.py  user.py  user_admin.py  user_avatar.py  waitlist.py  waitlist_admin.py
src/cap/api/demo/: router.py
src/cap/core/: auth_dependencies.py  google_oauth.py  security.py
src/cap/data/: cdb_model.py  sparql_util.py  vega_util.py  virtuoso.py
src/cap/data/cache/: pattern_registry.py  placeholder_counters.py  placeholder_restorer.py  query_file_parser.py  query_normalizer.py  semantic_matcher.py  sparql_normalizer.py  value_extractor.py
src/cap/database/: model.py  session.py
src/cap/database/alembic-migration/migrations/: env.py
src/cap/etl/cdb/: extractor_factory.py  post_processor.py  service.py  transformer_factory.py
src/cap/mailing/: email_service.py  event_triggers.py  translation.json
src/cap/mailing/templates/: base_email.html  oauth_login.html  user_access_granted.html  user_confirmation_resent.html  user_confirmed.html  user_registration.html  waiting_list_confirmation.html  waitlist_promoted.html
src/cap/rdf/: triplestore.py
src/cap/rdf/cache/: pattern_registry.py  placeholder_counters.py  placeholder_restorer.py  query_file_parser.py  query_normalizer.py  semantic_matcher.py  sparql_normalizer.py  value_extractor.py
src/cap/services/: admin_alerts_service.py  conversation_persistence.py  embedding_regeneration_policy.py  embedding_service.py  llm_client.py  metrics_service.py  msg_formatter.py  nl_service.py  ollama_client.py  redis_client.py  redis_nl_client.py  redis_sparql_client.py  result_processor.py  similarity_service.py  sparql_service.py
src/cap/services/intent/: context_assembler.py  refer_classifier.py  render_classifier.py
src/cap/shared_pages/: shared_page.css  shared_page.html
src/cap/static/: index.html
src/cap/static/assets/: bootstrap-BHo-GkmI.js  bootstrap-BHo-GkmI.js.br  bootstrap-BI8whqnn.js  bootstrap-BI8whqnn.js.br  bootstrap-CpwZJyXf.js  bootstrap-CpwZJyXf.js.br  bootstrap-aMpq94kq.js  bootstrap-aMpq94kq.js.br  cardano_serialization_lib-BvlNfnm9.js  cardano_serialization_lib-BvlNfnm9.js.br  i18n-BN0rQlvt.js  i18n-BN0rQlvt.js.br  i18n-Bwu5MbKd.js  i18n-Bwu5MbKd.js.br  i18n-Bzab3xhy.js  i18n-Bzab3xhy.js.br  i18n-DErDCc1p.js  i18n-DErDCc1p.js.br  index-0eANaNDs.js  index-0eANaNDs.js.br  index-6EtMUBnF.js  index-6EtMUBnF.js.br  index-8mcVHtla.js  index-8mcVHtla.js.br  index-Bw40izbG.css  index-Bw40izbG.css.br  index-BwE2iwnG.js  index-BwE2iwnG.js.br  index-CI6MxY9G.js  index-CI6MxY9G.js.br  index-CZNwC6uD.js  index-CZNwC6uD.js.br  index-CzKhxT9k.css  index-CzKhxT9k.css.br  index-DMaGEuaG.css  index-DMaGEuaG.css.br  index-DOUPk_Bg.js  index-DOUPk_Bg.js.br  index-DlB8U9Jr.css  index-DlB8U9Jr.css.br  (+11 more)
src/cap/templates/: llm.html
src/cap/util/: cardano_scan.py  nlp_util.py  sparql_date_processor.py  sparql_result_processor.py  sparql_util.py  status_message.py  str_util.py  vega_util.py
src/ontologies/: cardano.ttl
src/scripts/: injection.py  turtle_injection.py
src/tests/: conftest.py  fix_sparql_tests.py  kvr_tests.py  nl_cache_tests.py  nl_normalization_tests.py  nl_query_tests.py  oc_tests.py  sparql_generation_tests.py  sparql_tests.py  test_api.py  test_etl_extractors.py  test_etl_loader.py  test_etl_pipeline.py  test_etl_service.py  test_etl_transformers.py  test_integration.py  test_sparql_dates.py  test_usecases.py  test_virtuoso.py
(+21 files in other folders)
